--- a/trailsnearme.html
+++ b/trailsnearme.html
@@ -44,19 +44,27 @@
   <!-- End NavBar -->
 
   <!-- Start Your Pages Content Here -->
-  <p>
-    <a href="https://www.hikingproject.com/data/get-trails?lat=40.0274&lon=-105.2519&maxDistance=10&key=200968539-dd5a047534138b0cfaab99ad482a2492"> testing link </a>
-    
-  </p>
-
-  <button onclick="getTrails()">Click me</button> 
-
+  <div id="myData"></div>
   <script>
-    function getTrails() {
-      $.getJSON('https://www.hikingproject.com/data/get-trails?lat=40.0274&lon=-105.2519&maxDistance=10&key=200968539-dd5a047534138b0cfaab99ad482a2492', function (data) {
-    });
-    }
-    </script>
+      fetch('https://www.hikingproject.com/data/get-trails?lat=40.0274&lon=-105.2519&maxDistance=10&key=200968539-dd5a047534138b0cfaab99ad482a2492')
+          .then(function (response) {
+              return response.json();
+          })
+          .then(function (data) {
+              appendData(data);
+          })
+          .catch(function (err) {
+              console.log('error: ' + err);
+          });
+      function appendData(data) {
+          var mainContainer = document.getElementById("myData");
+          for (var i = 0; i < data.length; i++) {
+              var div = document.createElement("div");
+              div.innerHTML = 'Name: ' + data[i].name + ' Difficulty: ' + data[i].difficulty;
+              mainContainer.appendChild(div);
+          }
+      }
+  </script>
 
   
 
