--- a/trailsnearme.html
+++ b/trailsnearme.html
@@ -67,9 +67,9 @@
 
 
 
- <p>Click on the button to load result.html file:</p>
+ <p>Get Trails</p>
 
- <div id = "stage" style = "background-color:#cc0;">
+ <div id = "stage" style = "background-color:rgb(0, 204, 85);">
     STAGE
  </div>
 
