--- a/trailsnearme.html
+++ b/trailsnearme.html
@@ -69,8 +69,8 @@
 
  <p>Get Trails</p>
 
- <div id = "stage" style = "background-color:rgb(0, 204, 85);">
-    STAGE
+ <div id = "stage" class = "container">
+    RESULTS
  </div>
 
  <input type = "button" id = "driver" value = "Load Data" />
