--- a/trailsnearme.html
+++ b/trailsnearme.html
@@ -45,7 +45,7 @@
 
   <!-- Start Your Pages Content Here -->
 
-  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" type="text/javascript"></script>
 
   <script type = "text/javascript" language = "javascript">
   var x = "";
@@ -65,7 +65,9 @@
     });
  </script>
 
-
+<label for="location">Please enter a location: </label>
+<input type="text" id="location" name="location" required
+       minlength="4" maxlength="20" size="20">
 
  <p>Get Trails</p>
 
@@ -73,7 +75,7 @@
     RESULTS
  </div>
 
- <input type = "button" id = "driver" value = "Load Data" />
+ <input type = "button" id = "driver" value = "Get Trails" />
     
     
 
