--- a/trailsnearme.html
+++ b/trailsnearme.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <title>Trail Finder</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" type="text/javascript"></script>
   </head>
   <body>
 
@@ -45,9 +46,10 @@
 
   <!-- Start Your Pages Content Here -->
 
-  <script src="https://code.jquery.com/jquery-3.5.1.js" type="text/javascript"></script>
+ 
+ 
 
-  <script type = "text/javascript" language = "javascript">
+  <script type = "text/javascript" language = "javascript" src="https://code.jquery.com/jquery-3.5.1.js">
   var x = "";
     $(document).ready(function() {
  
@@ -82,7 +84,7 @@
   
 
   <!-- End Your Pages Content Here -->
-
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
   </body>
