basic look finished, data is still from example

--- a/trailsnearme.html
+++ b/trailsnearme.html
@@ -47,9 +47,9 @@
   <!-- Start Your Pages Content Here -->
 
  
- 
+  <div class="container">
 
-  <script type = "text/javascript" language = "javascript" src="https://code.jquery.com/jquery-3.5.1.js">
+  <script type = "text/javascript" language = "javascript">
   var x = "";
     $(document).ready(function() {
  
@@ -71,13 +71,15 @@
 <input type="text" id="location" name="location" required
        minlength="4" maxlength="20" size="20">
 
- <p>Get Trails</p>
+       <input type = "button" id = "driver" value = "Get Trails" />
+
 
  <div id = "stage" class = "container">
     RESULTS
  </div>
+ </div>
 
- <input type = "button" id = "driver" value = "Get Trails" />
+ 
     
     
 
