minor visual additions

--- a/trailsnearme.html
+++ b/trailsnearme.html
@@ -71,7 +71,7 @@
 <input type="text" id="location" name="location" required
        minlength="4" maxlength="20" size="20">
 
-       <input type = "button" id = "driver" value = "Get Trails" />
+       <input type = "button" id = "driver" value = "Get Trails" class="btn btn-primary">
 
 
  <div id = "stage" class = "container">
