--- a/trailsnearme.html
+++ b/trailsnearme.html
@@ -56,11 +56,14 @@
        $("#driver").click(function(event){
           $.getJSON('https://www.hikingproject.com/data/get-trails?lat=40.0274&lon=-105.2519&maxDistance=10&key=200968539-dd5a047534138b0cfaab99ad482a2492', function(jd) {
              
+            var sum = 0;
              console.log(JSON.stringify(jd));
              for (i in jd.trails) {
-                x += jd.trails[i].name + "<br>";
+               sum++;
+                x += "<tr><td>"+ sum +"</td><td>" + jd.trails[i].name + "</td><td>"+jd.trails[i].length +"</td><td>"+jd.trails[i].location + "</td></tr>";
               }
-              document.getElementById("stage").innerHTML = x;
+              document.getElementById("table").innerHTML = x;
+
           });
        });
    
@@ -77,6 +80,11 @@
  <div id = "stage" class = "container">
     RESULTS
  </div>
+ <table id="table"> 
+   <!-- # name length location -->
+   
+</table> 
+
  </div>
 
  
