Reduced nav bar to 2 options
Added an about me page for information on how to use site and reduced navbar to just a near me option and the home page option as the features are so interlinked that it makes more sense for users to step through the process versus be able to click through the pages there.

--- a/base.html
+++ b/base.html
@@ -25,13 +25,7 @@
         <a class="nav-link" href="#">Trails Near Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Trails For Me</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Estimate Fitness Level</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Gear Recommendation</a>
+        <a class="nav-link" href="#">About</a>
       </li>
     </ul>
   </div>
