--- a/personalized.html
+++ b/personalized.html
@@ -25,13 +25,7 @@
         <a class="nav-link" href="#">Trails Near Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Trails For Me</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Estimate Fitness Level</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Gear Recommendation</a>
+        <a class="nav-link" href="#">About</a>
       </li>
     </ul>
   </div>
