updated form button
updated form button for multiple functions

--- a/fitness.html
+++ b/fitness.html
@@ -67,7 +67,7 @@
         </select>
       </label>
       <br>
-      <button type='submit' class="btn btn-info mt-2 ml-4" onclick='getFit(); return false;'>Submit</button>
+      <button type='button' class="btn btn-info mt-2 ml-4" id='enter'>Submit</button>
       <br>
     </fieldset>
   </form>
