Added Re-Select Activity Level button
initially hidden

--- a/fitness.html
+++ b/fitness.html
@@ -64,6 +64,16 @@
     </fieldset>
   </form>
   <div id='result' class="mt-4 ml-4"></div>
+  <br>
+  <div style ='float: left; padding: 5px;'>
+  <span style="display: inline;">
+  </div>
+  <div style ='float: left; padding: 5px;'>
+  <form action="/fitness">
+      <input id='reSelect' type="submit" class="btn btn-light" style="display:none" value="Re-select Activity Level">
+  </form>
+  </span>
+  </div>
   <!-- End Your Pages Content Here -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
